feat: list player storage
