# src/controllers/routes.ts
@@ -14,6 +14,7 @@ import {
 } from './handlers/player-storage/clear-player-storage'
 import { deletePlayerStorageHandler } from './handlers/player-storage/delete-player-storage'
 import { getPlayerStorageHandler } from './handlers/player-storage/get-player-storage'
+import { listPlayerStorageHandler } from './handlers/player-storage/list-player-storage'
 import { upsertPlayerStorageHandler } from './handlers/player-storage/upsert-player-storage'
 import { UpsertEnvStorageRequestSchema, UpsertStorageRequestSchema } from './handlers/schemas'
 import { clearWorldStorageHandler } from './handlers/world-storage/clear-world-storage'
@@ -81,6 +82,11 @@ export async function setupRouter(context: GlobalContext): Promise<Router<Global
   )
 
   // Player storage endpoints
+  router.get(
+    '/players/:player_address/values',
+    withWorldName(authorizationMiddleware),
+    withWorldName(listPlayerStorageHandler)
+  )
   router.get(
     '/players/:player_address/values/:key',
     withWorldName(authorizationMiddleware),
